tests/baselines/reference/assignToModule.errors.txt
assignToModule.ts(2,1): error TS2708: Cannot use namespace 'A' as a value.


==== assignToModule.ts (1 errors) ====
    module A {}
    A = undefined; // invalid LHS
    ~
!!! error TS2708: Cannot use namespace 'A' as a value.